# microtex-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  res
src/: ffi.cpp  lib.rs  tex2png.rs
